# QuantumRuins

./: README.md  app.py  pyproject.toml  requirements.txt
core/: __init__.py  double_slit.py  gaussian_wavepacket.py  utils.py
demos/: 00_home.py  01_double_slit.py  02_gaussian_wavepacket.py  __init__.py
figures/stationary/: all_points_on_unit_circle.py  cancellation.py  fast_and_slow.py  phase_function.py
pages/: 01_double_slit.py  01_双缝干涉.py  02_高斯波包演化.py
